--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <button type="button" onclick="loadDoc()">My Bio</button>
-<div id="demo"><h2>Hi myself Arunkumar Click<mark> My bio</mark>  see my profile</h2></div>
+<div id="demo"><h2>Hi myself Arunkumar Click<strong> My bio</strong>  see my profile</h2></div>
 <script>
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
