--- a/test1.html
+++ b/test1.html
@@ -1,5 +1,7 @@
 <html>
-<head>
+<head></head>
+  <body>
+    <div>
 <h2>Name          :Arunkumar</h2><br>
 <h2>Father's Name : Murugan</h2><br>
 <h2>Date of Birth :04/07/1990</h2><br>
@@ -7,5 +9,6 @@
 <h2>Qualification :B.E (computer science)</h2><br>
 <h2>Company       :Photon Infotec<h2><br>
 <h2>Designation   : Anjular js Developer</h2><br>
-</head>
+</div>
+</body>
 </html>
